--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,11 @@
 
 body {
   min-width: 1100px;
+  max-width: 1440px;
   margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Raleway, sans-serif;
 }
 
