--- a/styles/style.css
+++ b/styles/style.css
@@ -88,11 +88,11 @@
     text-transform: uppercase;
     font-size: 100px;
     font-weight: 700;
-    letter-spacing: 30px;
+    letter-spacing: 0.3em;
 }
 
 .letter-spacing-expanded {
-    letter-spacing: 60px;
+    letter-spacing: 0.6em;
 }
 
 .aligned-text-left {
@@ -101,7 +101,6 @@
 }
 
 .aligned-text-center {
-    margin-right: 30px;
     text-align: center;
     line-height: 100%;
 }
